@@ -1,3 +1,8 @@
+2015-06-02  Mark Wielaard  <mjw@redhat.com>
+
+	* elf_getdata.c (convert_data): Make sure source data is properly
+	aligned for type before calling actual conversion function.
+
 2015-06-04  Mark Wielaard  <mjw@redhat.com>
 
 	* elf_begin.c (get_shnum): Check alignment of Shdr, not Ehdr before
